bootstrap/stylesheets/app.css
body {
  background-color:#f3f6e5;
  background-image: url(../images/tree_liquefy.jpg);  
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  min-width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  color: #797b72;
  font-family: 'Oxygen', sans-serif;
  font-weight: bold;
  line-height: 1.25;
}
p, label {
  color: #665;
  font-family:'Oxygen', sans-serif;

}

p {
  color:#161816;
  font-size: 10pt;
}

.biglabel {
  font-size: 12pt;
  padding: 5px;
}

h2 {
  font-family: 'Averia Serif Libre', courier;
  font-size: 50px;
  color: black;
  padding: 0 0 0 0;
}
.nav-bar {
  color:black;
}
.top-bar {
  background-color: #e5f2f5;
  font-family: sans-serif;
}


.holder {
	padding: 0px 0 50px 0;
    margin-top:10px;
  margin-bottom:15px;

}
.holder-big {
	padding: 30px 40px 170px 40px;
	background-image: -webkit-linear-gradient(bottom, rgba(243,246,229,0.5) 0%,
  rgba(255,255,255,0.5) 100%);
	background-image: linear-gradient(to top, rgba(243,246,229,0.5) 0%, 
  rgba(255,255,255,0.5) 100%);
	border-radius: 40px;

}
.center-box{
  margin: 0 auto;
  background-image: url(../images/header3.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  min-width: 100%;
}

.center-box-big {
  padding:40px 0 0 0;
  //margin: -50px auto 0 auto;
}

.main-content {
  margin: 0 auto;
  background-image: url(../images/bg.jpg);
  background-size: cover;
  min-width: 100%;
}

.link-box h2 {
  font-size: 26pt;
}

.link-box {
  text-align: center;
}

.bigbird {
  background-image: url(../images/owl2.png);
}

